[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://SettingsScene.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/kenney_ui/PNG/panel_brown.png" id="2_panel"]
[ext_resource type="Texture2D" path="res://assets/kenney_ui/PNG/buttonLong_beige.png" id="3_btn"]

[node name="SettingsScene" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_panel")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SETTINGS"
horizontal_alignment = 1

[node name="VolBox" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Panel/VBox/VolBox"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="Panel/VBox/VolBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "BACK"

[connection signal="value_changed" from="Panel/VBox/VolBox/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="Panel/VBox/BackButton" to="." method="_on_back_button_pressed"]
